--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "start": "ng serve",
     "start-open": "ng serve -o",
     "build": "ng build",
+    "build:href": "ng build --base-href ./",
+    "build:github": "npm run delete:docs && npm run build:href && npm run copy:dist",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "delete:docs": "del docs -f",
+    "copy:dist": "copyfiles -f dist/bases/browser/* ./docs"
   },
   "private": true,
   "dependencies": {
@@ -31,6 +35,8 @@
     "@types/jasmine": "~5.1.0",
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.16",
+    "copyfiles": "^2.4.1",
+    "del-cli": "^5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
